# NetStats-Live

./: .gitignore  ARTIFACTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DECISIONS.md  DECISION_GATES.md  HANDOFF.md  INTAKE.md  PROJECT.md  README.md  STATUS.md  TASKS.md
.github/workflows/: ci.yml
config/: netstats-live.desktop  nsl-linux.desktop
docs/dev/: ARTIFACTS.md  DECISIONS.md  EXECUTION.md  HANDOFF.md  INTAKE.md  PROJECT.md  QA.md  STATUS.md  TASKS.md  final-qa-2026-07-07.md
docs/plans/: README.md
docs/research/: README.md
docs/security/: README.md
docs/source/: analogx-nsl-Freeware.html
interface/web/: README.md
outputs/exports/: README.md
outputs/final/: README.md
outputs/reports/: README.md
src/: ClipCap.cpp  ClipCap.h  Collector.cpp  Collector.h  Core.cpp  Core.h  GraphPane.cpp  GraphPane.h  Lifecycle.cpp  Lifecycle.h  MainWindow.cpp  MainWindow.h  PaneWidget.cpp  PaneWidget.h  Settings.cpp  Settings.h  TextPane.cpp  TextPane.h  Theme.h  TrayIcon.cpp  TrayIcon.h  TrayIconVisual.cpp  TrayIconVisual.h  TraySimulation.cpp  TraySimulation.h  main.cpp
tests/: test_core.cpp  test_lifecycle.cpp  test_tray_icon.cpp  test_visual_theme.cpp
